--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
     <!-- <link rel="stylesheet" href="../src/fonts/stylesheet.css"> -->
   
@@ -19,7 +22,7 @@
   <body>
 
     <div id="root"></div>
-    <div style="font-family: 'Oks Free';"></div>
+    <!-- <div style="font-family: 'Oks Free';"></div> -->
 
   </body>
 </html>
